funland/vikunja/vikunja/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vikunja
  namespace: vikunja
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: vikunja
    app.kubernetes.io/name: vikunja
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/name: vikunja
      app.kubernetes.io/instance: vikunja
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/instance: vikunja
        app.kubernetes.io/name: vikunja
    spec:
      containers:
        - name: main
          image: vikunja/vikunja:2.2.2
          resources:
            limits:
              cpu: "100m"
              memory: "96Mi"
              ephemeral-storage: "128Mi"
            requests:
              cpu: "20m"
              memory: "48Mi"
              ephemeral-storage: "16Mi"
          volumeMounts:
            - mountPath: /etc/vikunja/config.yaml
              name: config
              subPath: config.yaml
            - mountPath: /app/vikunja/files
              name: files
      volumes:
        - name: config
          secret:
            secretName: vikunja-sso
        - name: files
          persistentVolumeClaim:
            claimName: vikunja-files
